--- a/Flexbox Startup Site/index.html
+++ b/Flexbox Startup Site/index.html
@@ -9,15 +9,24 @@
   <title>Startup Page</title>
 </head>
 <body>
-  <header></header>
-  <section id="showcase">
-    <nav></nav>
-  </section>
+  <header class="bg">
+    <!-- <div class="top-bar"> -->
+      <nav>
+      <p class="logo">Website Logo</p>        
+        <ul id="menu">
+          <li class="nav-item">Home</li>
+          <li class="nav-item">Products</li>
+          <li class="nav-item">About</li>
+          <li class="nav-item">Contacts</li>
+        </ul>  
+      </nav>
+    <!-- </div> -->
+    <section id="showcase">
+    </section>
+  </header>
   <section id="features">
-
   </section>
   <section id="testimony">
-
   </section>
   <footer></footer>
 </body>
