Continue working on nav bar and first section

--- a/Flexbox Startup Site/index.html
+++ b/Flexbox Startup Site/index.html
@@ -10,7 +10,6 @@
 </head>
 <body>
   <header class="bg">
-    <!-- <div class="top-bar"> -->
       <nav>
       <p class="logo">Website Logo</p>        
         <ul id="menu">
@@ -18,10 +17,14 @@
           <li class="nav-item">Products</li>
           <li class="nav-item">About</li>
           <li class="nav-item">Contacts</li>
-        </ul>  
+        </ul>
       </nav>
-    <!-- </div> -->
     <section id="showcase">
+        <div class="call-to-action">
+            <h1>Responsive Flexbox Template</h1>
+            <h2>A freebie by Tutorialzine (and Roniel Valdez)</h2>
+            <button class="btn download">DOWNLOAD IT HERE</button>
+        </div>
     </section>
   </header>
   <section id="features">
