Restructed showcase and nav positioning

--- a/Flexbox Startup Site/index.html
+++ b/Flexbox Startup Site/index.html
@@ -9,24 +9,23 @@
   <title>Startup Page</title>
 </head>
 <body>
-  <header class="bg">
-      <nav>
-      <p class="logo">Website Logo</p>        
-        <ul id="menu">
-          <li class="nav-item">Home</li>
-          <li class="nav-item">Products</li>
-          <li class="nav-item">About</li>
-          <li class="nav-item">Contacts</li>
-        </ul>
-      </nav>
-    <section id="showcase">
-        <div class="call-to-action">
-            <h1>Responsive Flexbox Template</h1>
-            <h2>A freebie by Tutorialzine (and Roniel Valdez)</h2>
-            <button class="btn download">DOWNLOAD IT HERE</button>
-        </div>
-    </section>
-  </header>
+  <div class="bg"></div>
+  <nav>
+  <p class="logo">Website Logo</p>        
+  <ul id="menu">
+    <li class="nav-item">Home</li>
+    <li class="nav-item">Products</li>
+    <li class="nav-item">About</li>
+    <li class="nav-item">Contacts</li>
+  </ul>
+  </nav>
+  <section id="showcase">
+    <div class="call-to-action">
+        <h1>Responsive Flexbox Template</h1>
+        <h2>A freebie by Tutorialzine (and Roniel Valdez)</h2>
+        <button class="btn download">DOWNLOAD IT HERE</button>
+    </div>
+  </section>
   <section id="features">
   </section>
   <section id="testimony">
