Styled the section tag and added button styling

--- a/Flexbox Startup Site/index.html
+++ b/Flexbox Startup Site/index.html
@@ -19,12 +19,10 @@
     <li class="nav-item">Contacts</li>
   </ul>
   </nav>
-  <section id="showcase">
-    <div class="call-to-action">
+  <section id="hero">
         <h1>Responsive Flexbox Template</h1>
         <h2>A freebie by Tutorialzine (and Roniel Valdez)</h2>
-        <button class="btn download">DOWNLOAD IT HERE</button>
-    </div>
+        <a href="/index.html" class="btn download">Download it here</a>
   </section>
   <section id="features">
   </section>
