Added the showcase or previous work section

--- a/Flexbox Startup Site/index.html
+++ b/Flexbox Startup Site/index.html
@@ -24,7 +24,17 @@
     <h2>A freebie by Tutorialzine (and Roniel Valdez)</h2>
     <a href="/index.html" class="btn download">Download it here</a>
   </section>
-  <section id="features">
+  <section id="showcase">
+    <h2>Some of our work</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id felis et ipsum bibendum ultrices. Morbi vitae pulvinar velit. Sed aliquam dictum sapien, id sagittis augue malesuada eu.</p>
+    <hr>
+
+    <ul class="grid">
+      <li class="small" style="background-image: url(media/coast.jpg)"></li>
+      <li class="big" style="background-image: url(media/island.jpg)"></li>
+      <li class="big" style="background-image: url(media/balloon.jpg)"></li>
+      <li class="small" style="background-image: url(media/mountain.jpg)"></li>
+    </ul>
   </section>
   <section id="testimony">
   </section>
