Reestructured text style properties

--- a/Flexbox Startup Site/index.html
+++ b/Flexbox Startup Site/index.html
@@ -24,8 +24,8 @@
     <h2>A freebie by Tutorialzine (and Roniel Valdez)</h2>
     <a href="/index.html" class="btn download">Download it here</a>
   </section>
-  <section id="showcase">
-    <h2>Some of our work</h2>
+  <section id="our-work">
+    <h2 class="title">Some Of Our Work</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id felis et ipsum bibendum ultrices. Morbi vitae pulvinar velit. Sed aliquam dictum sapien, id sagittis augue malesuada eu.</p>
     <hr>
 
@@ -36,7 +36,13 @@
       <li class="small" style="background-image: url(media/mountain.jpg)"></li>
     </ul>
   </section>
-  <section id="testimony">
+  <section id="features">
+    <h2 class="title">Features and services</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id felis et ipsum bibendum ultrices. Morbi vitae pulvinar velit. Sed aliquam dictum sapien, id sagittis augue malesuada eu.</p>
+  </section>
+  <section id="testimony"
+  ></section>
+  <section id="newsletter">
   </section>
   <footer></footer>
 </body>
