Added the features and services section

--- a/Flexbox Startup Site/index.html
+++ b/Flexbox Startup Site/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css"\>
-  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
   <title>Startup Page</title>
 </head>
 <body>
@@ -37,8 +37,26 @@
     </ul>
   </section>
   <section id="features">
-    <h2 class="title">Features and services</h2>
+    <h2 class="title">Features And Services</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id felis et ipsum bibendum ultrices. Morbi vitae pulvinar velit. Sed aliquam dictum sapien, id sagittis augue malesuada eu.</p>
+    <hr>
+    <ul class="grid">
+      <li>
+        <i class="fa fa-camera-retro"></i>
+        <h4 class="subtitle">Photography</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id felis et ipsum bibendum ultrices vitae pulvinar velit.</p>
+      </li>
+      <li>
+        <i class="fa fa-cubes"></i>
+        <h4 class="subtitle">Web Development</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id felis et ipsum bibendum ultrices vitae pulvinar velit.</p>
+      </li>
+      <li>
+        <i class="fa fa-newspaper-o"></i>
+        <h4 class="subtitle">Content Editing</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id felis et ipsum bibendum ultrices vitae pulvinar velit.</p>
+      </li>
+    </ul>
   </section>
   <section id="testimony"
   ></section>
