Added and styled reviews section

--- a/Flexbox Startup Site/index.html
+++ b/Flexbox Startup Site/index.html
@@ -58,8 +58,15 @@
       </li>
     </ul>
   </section>
-  <section id="testimony"
-  ></section>
+  <section id="reviews">
+    <h2 class="title">What Others Say:</h2>
+    <p class="quote">Mauris sit amet mauris a arcu eleifend ultricies eget ut dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+    <p class="author">— Patrick Farrell</p>
+    <p class="quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id felis et ipsum bibendum ultrices. Morbi vitae pulvinar velit. Sed aliquam dictum sapien, id sagittis augue malesuada eu.</p>
+    <p class="author">— George Smith</p>
+    <p class="quote">Donec commodo dolor augue, vitae faucibus tortor tincidunt in. Aliquam vitae leo quis mi pulvinar ornare. Integer eu iaculis metus.</p>
+    <p class="author">— Kevin Blake</p>
+  </section>
   <section id="newsletter">
   </section>
   <footer></footer>
