--- a/Flexbox Startup Site/index.html
+++ b/Flexbox Startup Site/index.html
@@ -22,7 +22,7 @@
   <section id="hero">
     <h1>Responsive Flexbox Template</h1>
     <h2>A freebie by Tutorialzine (and Roniel Valdez)</h2>
-    <a href="/index.html" class="btn download">Download it here</a>
+    <a href="/index.html" class="btn">Download it here</a>
   </section>
   <section id="our-work">
     <h2 class="title">Some Of Our Work</h2>
@@ -68,7 +68,15 @@
     <p class="author">— Kevin Blake</p>
   </section>
   <section id="newsletter">
+    <h2 class="title">Join Our Newsletter</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id felis et ipsum bibendum ultrices. Morbi vitae pulvinar velit. Sed aliquam dictum sapien, id sagittis augue malesuada eu.</p>
+    <hr>
+    <form action="">
+      <input type="email" placeholder="Email">
+      <a href="./index.html" class="btn" type="submit">Suscribe now</a>
+    </form>
   </section>
+
   <footer></footer>
 </body>
 </html>
