Filled and Styled footer section

--- a/Flexbox Startup Site/index.html
+++ b/Flexbox Startup Site/index.html
@@ -73,10 +73,30 @@
     <hr>
     <form action="">
       <input type="email" placeholder="Email">
-      <a href="./index.html" class="btn" type="submit">Suscribe now</a>
+      <a href="./index.html" class="btn" type="submit">Subscribe now</a>
     </form>
   </section>
 
-  <footer></footer>
+  <footer>
+    <ul class="social-media">
+      <li> 
+        <a href="#"><i class="fa fa-twitter-square"></i></a>
+      </li>
+      <li>
+        <a href="#"><i class="fa fa-facebook-square"></i></a>
+      </li>
+      <li>
+        <a href="#"><i class="fa fa-snapchat-square"></i></a>
+      </li>
+      <li>
+        <a href="#"><i class="fa fa-pinterest-square"></i></a>
+      </li>
+      <li>
+        <a href="#"><i class="fa fa-github-square"></i></a>
+      </li>
+    </ul>
+    <p>MADE BY TUTORIALZINE AND REMADE AS A PROYECT BY RONIEL VALDEZ.</p> 
+    <p>IMAGES COURTESY TO UNSPLASH. NO ATTRIBUTION REQUIRED. YOU CAN REMOVE THIS FOOTER.</p>
+  </footer>
 </body>
 </html>
