Added partial responsiveness support

--- a/Flexbox Startup Site/index.html
+++ b/Flexbox Startup Site/index.html
@@ -9,17 +9,19 @@
   <title>Startup Page</title>
 </head>
 <body>
-  <div class="bg"></div>
-  <nav>
-  <p class="logo">Website Logo</p>        
-  <ul id="menu">
-    <li class="nav-item">Home</li>
-    <li class="nav-item">Products</li>
-    <li class="nav-item">About</li>
-    <li class="nav-item">Contacts</li>
-  </ul>
-  </nav>
+  <!-- <header> -->
+    <nav>
+    <p class="logo">Website Logo</p>        
+    <ul id="menu">
+      <li class="nav-item">Home</li>
+      <li class="nav-item">Products</li>
+      <li class="nav-item">About</li>
+      <li class="nav-item">Contacts</li>
+    </ul>
+    </nav>
+  <!-- </header> -->
   <section id="hero">
+  <div class="bg"></div>
     <h1>Responsive Flexbox Template</h1>
     <h2>A freebie by Tutorialzine (and Roniel Valdez)</h2>
     <a href="/index.html" class="btn">Download it here</a>
